Change css to solve bug on mobile? Try margin?

--- a/css/style.scss
+++ b/css/style.scss
@@ -90,7 +90,7 @@ font-family: 'Lato', sans-serif;
 
 .inset {
   padding: 20px;
-  padding-right: 40px;
+  margin-right: 40px;
 }
 
 .flex-video {
